@@ -24,6 +24,7 @@
 #include <cstdio>
 #include <cstdlib>
 #include <ctime>
+#include <fcntl.h>
 #include <functional>
 #include <string>
 #include <sys/prctl.h>
@@ -174,6 +175,11 @@ private:
       exit(EXIT_FAILURE);
     }
   }
+  void parse_detach(parser_argument_iterator_t begin, parser_argument_iterator_t end) {
+    assert(std::next(begin) == end);
+    this->detach = true;
+    this->fork = true;
+  }
   void parse_logging_path(parser_argument_iterator_t begin, parser_argument_iterator_t end) {
     assert(std::next(begin) == end);
     this->logging_path = *begin;
@@ -209,6 +215,16 @@ private:
     printf("                                  BestFit: MINIMIZE free space after your program launches   \n");
     printf("                                                                                             \n");
     printf("  --time                        When the program terminates, summary its elapsed time        \n");
+    printf("                                                                                             \n");
+    printf("  --fork                        Return after the process is launched, effectively run it in  \n");
+    printf("                                 background. This will also remap opened file descriptors so \n");
+    printf("                                 that stdin/stdout/stderr of the launched process will refer \n");
+    printf("                                 to /dev/null, unless --log is specified                     \n");
+    printf("                                                                                             \n");
+    printf("  --detach                      Detach the launched process from the session in which it is  \n");
+    printf("                                 launched, effectively stops it from being terminated after  \n");
+    printf("                                 the user has logged out or the shell itself has terminated. \n");
+    printf("                                 Implies --fork                                              \n");
     printf("                                                                                             \n");
     printf("  --log PATH                    Duplicate and save stdout and stderr to PATH                 \n");
     printf("                                                                                             \n");
@@ -263,6 +279,12 @@ public:
   // if we shall measure (elapsed) time of the program
   bool timing{false};
 
+  // if we shall fork before proceed so that we can run in background
+  bool fork{false};
+
+  // if we shall setsid(2) after forking off
+  bool detach{false};
+
   // destination path to duplicate and store output from the program
   std::string logging_path{};
 
@@ -305,6 +327,18 @@ public:
           Configurations::true_saver(this->timing, begin, end);
         },
         "--time", 0
+    );
+    options.emplace_back(
+        [this](parser_argument_iterator_t begin, parser_argument_iterator_t end) {
+          Configurations::true_saver(this->fork, begin, end);
+        },
+        "--fork", 0
+    );
+    options.emplace_back(
+        [this](parser_argument_iterator_t begin, parser_argument_iterator_t end) {
+          this->parse_detach(begin, end);
+        },
+        "--detach", 0
     );
     options.emplace_back(
         [this](parser_argument_iterator_t begin, parser_argument_iterator_t end) {
@@ -357,6 +391,8 @@ public:
     fprintf(target, "  memory_estimation: %llu\n", this->memory_estimation);
     fprintf(target, "  policy: %s\n", this->policy == SelectionPolicy::BestFit ? "BestFit" : "WorstFit");
     fprintf(target, "  timing: %s\n", this->timing ? "true" : "false");
+    fprintf(target, "  fork: %s\n", this->fork ? "true" : "false");
+    fprintf(target, "  detach: %s\n", this->detach ? "true" : "false");
     fprintf(target, "  logging_path: %s\n", this->logging_path.c_str());
     fprintf(target, "  monitor_gpu_memory: %llu\n", this->monitor_gpu_memory);
     fprintf(target, "  wait_memory_timeout: %llu\n", this->wait_memory_timeout);
@@ -544,6 +580,40 @@ auto main(int argc, char *argv[]) -> int {
     device_ids.emplace_back(available_devices.at(i).id);
   }
   fprintf(stderr, "\n");
+  if (config.fork) {
+    pid_t pid = fork();
+    if (pid == -1) {
+      perror("failed to fork");
+      return -errno;
+    }
+    if (pid != 0) {
+      fprintf(stderr, "running in background with pid %d\n", pid);
+      return 0;
+    }
+    // remap file descriptors
+    int dev_null_fd = open("/dev/null", O_RDWR);
+    if (dev_null_fd == -1) {
+      perror("failed to open /dev/null");
+    }
+    fclose(stdin);
+    fclose(stdout);
+    fclose(stderr);
+    if (dev_null_fd != -1) {
+      dup2(dev_null_fd, STDIN_FILENO);
+      dup2(dev_null_fd, STDOUT_FILENO);
+      dup2(dev_null_fd, STDERR_FILENO);
+      close(dev_null_fd);
+      stderr = fdopen(STDERR_FILENO, "w");
+      stdout = fdopen(STDOUT_FILENO, "w");
+      setbuf(stderr, nullptr);
+      setbuf(stdout, nullptr);
+    }
+  }
+  if (config.detach) {
+    // since --detach implies --fork, only the forked process may run this code, therefore a setsid(2) call
+    //  will always succeed
+    setsid(); // this shall be sufficient
+  }
   setenv("CUDA_VISIBLE_DEVICES", devices_to_use.c_str(), 1);
   if (!config.logging_path.empty()) {
     // setup logging first: we use tee to do this job, assuming which in installed on the system
